--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel  --presets @babel/preset-react client.js -o cli.j",
+    "build": "babel  --presets @babel/preset-react client.js -o out/cli.js",
+    "watch": "watchexec -i out/* -e js,css,html npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "bent": "^7.3.12",
     "cli-table3": "^0.6.1",
     "faker": "^5.5.3",
     "ink": "^3.2.0",
