--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel  --presets @babel/preset-react client.js -o out/cli.js",
+    "build": "babel  client.js -o out/cli.js",
     "watch": "watchexec -i out/* -e js,css,html npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,14 +13,12 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "bent": "^7.3.12",
-    "cli-table3": "^0.6.1",
     "faker": "^5.5.3",
     "ink": "^3.2.0",
     "ink-table": "^3.0.0",
     "ink-text-input": "^4.0.2",
     "meilisearch": "^0.24.0",
-    "react": "^17.0.2",
-    "terminal-kit": "^2.3.0"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
