--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,14 @@ services:
     volumes:
       - meilisearch_data:/data.ms
 
+  typesense:
+    image: typesense/typesense:0.23.0.rc26
+    command: ['--data-dir',  '/data' ,'--api-key=Hu52dwsas2AdxdE']
+    ports:
+      - "8108:8108"
+    volumes:
+      - typesense_data:/data
+
   questdb:
     image: questdb/questdb
     ports:
@@ -27,3 +35,4 @@ services:
 volumes:
     meilisearch_data: {}
     questdb_data: {}
+    typesense_data: {}
